--- a/NumberGenerators/NumberGenerators.csproj
+++ b/NumberGenerators/NumberGenerators.csproj
@@ -7,4 +7,8 @@
     <StartupObject />
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\NumberGenerators.Common\NumberGenerators.Common.csproj" />
+  </ItemGroup>
+
 </Project>
